changes to script

--- a/analysis/figures/table1.tex
+++ b/analysis/figures/table1.tex
@@ -1,4 +1,4 @@
-\begin{table}[!t]
+\begin{table}
 \fontsize{9.0pt}{10.8pt}\selectfont
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lllrrrrl}
 \toprule
