--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -524,3 +524,14 @@
   year={2022},
   publisher={Elsevier}
 }
+
+@article{poerio2024interoceptive,
+  title={Interoceptive attention and mood in daily life: an experience-sampling study},
+  author={Poerio, Giulia L and Klabunde, Megan and Bird, Geoffrey and Murphy, Jennifer},
+  journal={Philosophical Transactions of the Royal Society B},
+  volume={379},
+  number={1908},
+  pages={20230256},
+  year={2024},
+  publisher={The Royal Society}
+}
