--- a/analysis/Stud1_a.qmd
+++ b/analysis/Stud1_a.qmd
@@ -109,7 +109,7 @@ df4 <- haven::read_sav("../data/Todd2022/CompleteData_new.sav") |>
 
 ```{r}
 
-df5_attention <- readxl::read_excel("C:/Users/asf25/Documents/studies/InteroceptionIAS/data/Arslanova2022/Participants2.xlsx", 
+df5_attention <- readxl::read_excel("../data/Arslanova2022/Participants2.xlsx", 
     sheet = "FINAL") |>
   filter(ActorHR == 1) |>
   select(Subj.ID, Gender, Age) |>
@@ -312,7 +312,7 @@ pi_vars <- c("PI_Enticing", "PI_Alive", "PI_Safe", "PI_Good", "PI_Changing",
 
 correlation::correlation(
   df10c[, "IAS_Total", drop = FALSE],  
-  data2 = select(df10c, all_of(pi_vars)), 
+  data2 = select(df10c, all_of(pi_vars)), p_adjust = "none"
 ) |> 
   # Formatting correlation results
   mutate(val = paste0(insight::format_value(r), format_p(p, stars_only = TRUE))) |>
@@ -410,8 +410,8 @@ save(data, file = "../data/data.RData")
 - **Sample 10a**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10a, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 10b**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10b, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 10c**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10c, age = "Age", sex = NA, gender = "Gender")`.
-- **Sample 11a**: Data from [Giulia's (2024)](https://osf.io/49wbv) study , included `r report::report_participants(df11a, age = "Age", sex = NA, gender = "Gender")`
-- **Sample 11b**: Data from [Giulia] study , included `r report::report_participants(df11b, age = "Age", sex = NA, gender = "Gender")`
+- **Sample 11a**: Data from [Poreiro's(2024)](https://osf.io/49wbv) study , included `r report::report_participants(df11a, age = "Age", sex = NA, gender = "Gender")`
+- **Sample 11b**: Data from [Poreiro's] study , included `r report::report_participants(df11b, age = "Age", sex = NA, gender = "Gender")`
 
 
 Total N = `r nrow(df1a) + nrow(df1b) + nrow(df2) + nrow(df3) + nrow(df4) + nrow(df5) + nrow(df6) + nrow(df7a) + nrow(df7b) + nrow(df7c) + nrow(df8a) + nrow(df8b) + nrow(df9) + nrow(df10a) + nrow(df10b) + nrow(df10c) +nrow(df11a) + nrow(df11b)`.
