--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -535,3 +535,25 @@
   year={2024},
   publisher={The Royal Society}
 }
+
+@article{golino2017exploratory,
+  title={Exploratory graph analysis: A new approach for estimating the number of dimensions in psychological research},
+  author={Golino, Hudson F and Epskamp, Sacha},
+  journal={PloS one},
+  volume={12},
+  number={6},
+  pages={e0174035},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{christensen2023unique,
+  title={Unique variable analysis: A network psychometrics method to detect local dependence},
+  author={Christensen, Alexander P and Garrido, Luis Eduardo and Golino, Hudson},
+  journal={Multivariate Behavioral Research},
+  volume={58},
+  number={6},
+  pages={1165--1182},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
